--- a/specs/ApplicationStatus.yaml
+++ b/specs/ApplicationStatus.yaml
@@ -290,10 +290,7 @@ components:
       in: query
       required: false
       schema:
-        type: string
-        minLength: 9
-        maxLength: 9
-        pattern: (^[a-zA-Z0-9](9)$)
+        $ref: '#/components/schemas/cusip'
     producerNumber:
       name: producerNumber
       description: Optional query parameter for the carrier assigned unique identifier.
@@ -377,6 +374,11 @@ components:
         minimum: 1
         maximum: 1000
   schemas:
+    cusip:
+      type: string
+      minLength: 9
+      maxLength: 9
+      pattern:  ^[0-9]{3}[A-Z0-9]{5}[0-9]$
     IndividualIdentity:
       description: Schema for individual identity data
       required: [firstName,lastName]
@@ -389,17 +391,17 @@ components:
           type: string
           minLength: 1
           maxLength: 105
-          pattern: ^[a-zA-Z0-9=()=*@#\\s.,'_/~%$!();:&amp;&quot;+&#x00ae;®`\\-\\\\?\"=]{1,105}
+          pattern: ^[a-zA-Z0-9=()*@#\s.,'_/~%$!();:&"®`\-\\?"]{1,105}$
         middleName:
           type: string
           minLength: 1
           maxLength: 105
-          pattern: ^[a-zA-Z0-9=()=*@#\\s.,'_/~%$!();:&amp;&quot;+&#x00ae;®`\\-\\\\?\"=]{1,105}
+          pattern: ^[a-zA-Z0-9=()*@#\s.,'_/~%$!();:&"®`\-\\?"]{1,105}$
         lastName:
           type: string
           minLength: 1
           maxLength: 105
-          pattern: ^[a-zA-Z0-9=()=*@#\\s.,'_/~%$!();:&amp;&quot;+&#x00ae;®`\\-\\\\?\"=]{1,105}
+          pattern: ^[a-zA-Z0-9=()*@#\s.,'_/~%$!();:&"®`\-\\?"]{1,105}$
         taxId:
           type: string
           maxLength: 9
@@ -446,7 +448,7 @@ components:
           type: string
           minLength: 1
           maxLength: 180
-          pattern: ^[a-zA-Z0-9=()=*@#\\s.,'_/~%$!();:&amp;&quot;+&#x00ae;®`\\-\\\\?\"=]{1,180} 
+          pattern: ^[a-zA-Z0-9=()*@#\s.,'_/~%$!();:&"®`\-\\?"]{1,180}$
         taxId:
           type: string
     EntityProducer:
@@ -735,7 +737,7 @@ components:
                     type: string
                     minLength: 1
                     maxLength: 180
-                    pattern:  ^[a-zA-Z0-9=()=*@#\\s.,'_/~%$!();:&amp;&quot;+&#x00ae;®`\\-\\\\?\"=]{1,180}
+                    pattern: ^[a-zA-Z0-9=()*@#\s.,'_/~%$!();:&"®`\-\\?"]{1,180}$
                   accountNumber:
                     type: string
                   startDate:
@@ -777,10 +779,7 @@ components:
               type: string
               maxLength: 65
         cusip:
-          type: string
-          minLength: 9
-          maxLength: 9
-          pattern: (^[a-zA-Z0-9](9)$)
+          $ref: '#/components/schemas/cusip'
         productName:
           type: string
           maxLength: 180
@@ -817,7 +816,7 @@ components:
               type: string
               minLength: 1
               maxLength: 180
-              pattern:  ^[a-zA-Z0-9=()=*@#\\s.,'_/~%$!();:&amp;&quot;+&#x00ae;®`\\-\\\\?\"=]{1,180}
+              pattern: ^[a-zA-Z0-9=()*@#\s.,'_/~%$!();:&"®`\-\\?"]{1,180}$
             phoneNumber:
               type: string
               minLength: 10
@@ -948,10 +947,7 @@ components:
           minLength: 1
           maxLength: 65
         cusip:
-          type: string
-          minLength: 9
-          maxLength: 9
-          pattern: (^[a-zA-Z0-9](9)$)
+          $ref: '#/components/schemas/cusip'
         producerNumber:
           type: string
           maxLength: 30
